# bac

./: .gitignore  pyproject.toml
inspiration/: ClassicApproach.ipynb  NaiveBayes.ipynb  TextClassificationCNN.ipynb  TextClassificationRNN.ipynb
scripts/: analyze_assignee.ipynb  resutl_diagrams.ipynb
src/: cnn_glove.py  run_cnn.py  run_lstm.py  run_mlp.py
src/dataset/: _1_load_dataset.py  _2_splitting.py  _3_2_data_augmentation.py  _3_data_augmentation.py  _4_data_loaders.py  __init__.py  _dataset_types.py  prepare_dataset.py
src/models/: __init__.py  cnn.py  lstm.py  mlp.py
src/tokenization/: __init__.py  bert.py
src/utils/: __init__.py  glove_single_dataloader.py  metrics.py  select_opt_lr.py  single_vector_dataloader.py  text_pre_process.py  train_one_epoch.py  validation_epoch.py
src/vectorization/: __init__.py  bert_data_loader.py  bert_data_loader_cls.py  embedding_type.py  glove.py  glove_data_loader.py  prepare_dataset.py  type_of.py  w2v.py
